--- a/.github/workflows/generate-ascii.yaml
+++ b/.github/workflows/generate-ascii.yaml
@@ -9,20 +9,11 @@ jobs:
         - name: Chekout Repo
           uses: actions/checkout@v4
 
-        - name: Install Cowsay Program
-          run: sudo apt-get install cowsay -y
-
-        - name: Execute Cowsay CMD
-          run: cowsay -f dragon "Run for cover, I am a DRAGON....RAWR" >> dragon.txt
-
-        - name: Test File EXists
-          run: grep -i "dragon" dragon.txt
-
-        - name: Read File
-          run: cat dragon.txt
-
-        - name: List Repo Files
+        - name: List files
           run: ls -ltra
+
+        - name: Executing Shell Script
+          run: ./ascii-script.sh
 
 
         # - name: List files
