--- a/.github/workflows/mutiple_Jobs.yaml
+++ b/.github/workflows/mutiple_Jobs.yaml
@@ -7,31 +7,31 @@ jobs:
         runs-on: ubuntu-latest
         steps:
         - name: Install Cowsay Program
-          uses: sudo apt-get install cowsay -y
+          run: sudo apt-get install cowsay -y
 
         - name: Execute Cowsay CMD
-          uses: cowsay -f dragon "Run for cover, I am a DRAGON....RAWR" >> dragon.txt
+          run: cowsay -f dragon "Run for cover, I am a DRAGON....RAWR" >> dragon.txt
 
         - name: Sleep for 30 seconds
-          uses: sleep 30
+          run: sleep 30
 
     test_job_2:
         runs-on: ubuntu-latest
         steps:
         - name: Sleep for 10 seconds
-          uses: sleep 10
+          run: sleep 10
 
         - name: Test File exists
-          uses: grep -i "dragon" dragon.txt
+          run: grep -i "dragon" dragon.txt
 
     deploy_job_3:
         runs-on: ubuntu-latest
         steps:
         - name: Read File
-          uses: cat dragon.txt
+          run: cat dragon.txt
     
         - name: Deploy
-          uses: echo Deploying ...
+          run: echo Deploying ...
 
         # - name: Chekout Repo
         #   uses: actions/checkout@v4
